# fsa

./: .gitignore  analysis.ipynb  batches.db  main.ipynb  pyproject.toml  treatment.ipynb
crawling/headless/: main.ipynb  main.py  pyproject.toml
crawling/headless/crawler/: exame.py  valor.py
crawling/non-headless/: database.go  go.mod  go.sum  main.go
crawling/non-headless/crawlers/: bloomberg.go  constants.go  investing.go  investnews.go  models.go
processing/: config.py  database.py  utils.py
processing/juvenal/: model.py
processing/romeu/: backtesting.py  batch_processing.py  pipeline.py
src/: backtest.py  batch_processing.py  config.py  database.py  dto.py  logs.py  model.py  noticias.py
