[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=1.7.11",
    "anbima-calendar>=0.1.1",
    "apscheduler>=3.11.0",
    "brazilian-holidays>=0.1.20",
    "fastparquet>=2024.11.0",
    "google-genai>=1.30.0",
    "holidays>=0.73",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.3",
    "nbformat>=5.10.4",
    "nltk>=3.9.1",
    "numba>=0.61.2",
    "openai>=1.99.9",
    "pandarallel>=1.6.5",
    "pandas>=2.2.3",
    "plotly>=6.3.0",
    "psycopg2-binary>=2.9.10",
    "python-decouple>=3.8",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.41",
    "tiktoken>=0.11.0",
    "yfinance>=0.2.61",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
